--- a/index.org
+++ b/index.org
@@ -2133,6 +2133,40 @@ categories:
       dbSendQuery(ch, sprintf("drop table %s", temp_table))
 #+end_src
 
+** 2013-12-18-animations-using-R
+#+name:animations-using-R-header
+#+begin_src R :session *R* :tangle ~/projects/ivanhanigan.github.com.raw/_posts/2013-12-18-animations-using-R.md :exports none :eval no :padline no
+  ---
+  name: 2013-12-18-animations-using-R
+  layout: post
+  title: animations-using-R
+  date: 2013-12-18
+  categories:
+  - research methods
+  - visualisation
+  ---
+  
+  - following on from my previous posts about [animated maps](http://ivanhanigan.github.io/2013/07/animated-maps/), [spatio-temporal animations](http://ivanhanigan.github.io/2013/06/spatio-temporal-animations/) and animations [with buttons for go, stop and reverse](http://ivanhanigan.github.io/button/index.html)
+  - Here is a quick note about how to do a simple animation with R to create a movie file (GIF)
+  - To create this movie
+  
+  ![animation.gif](animation/animation.gif)
+  
+  
+  #### Code:animations-using-R
+      if(!require(animation)) install.packages("animation");
+      require(animation)
+      saveGIF(
+      {
+      ani.options(nmax = 100, interval = 0.5)
+      par(mar = c(3, 2.5, 0.5, 0.2), pch = 20, mgp = c(1.5, 0.5,0))
+      buffon.needle(mat = matrix(c(1, 2, 1, 3), 2))
+      },
+      outdir = getwd()
+      )
+      
+#+end_src
+
 * Statistical Modelling
 ** COMMENT Logistic Regression
 *** COMMENT a-great-intro-2-logistic-regression
