--- a/index.org
+++ b/index.org
@@ -679,6 +679,33 @@ Here are a few links to some recent data munging tips I picked up last week:
      
 #+end_src
 
+*** TODO 2013-12-20-extend-Rs-data-frame-class-with-metadata
+#+name:extend-Rs-data-frame-class-with-metadata-header
+#+begin_src markdown :tangle no :exports none :eval no :padline no
+---
+name: extend-Rs-data-frame-class-with-metadata
+layout: post
+title: extend-Rs-data-frame-class-with-metadata
+date: 2013-12-20
+categories:
+-
+---
+:tangle ~/projects/ivanhanigan.github.com.raw/_posts/2013-12-20-extend-Rs-data-frame-class-with-metadata.md
+"reml now extends R's data.frame class by introducing the data.set class which includes additional metadata required by EML"
+https://github.com/ropensci/reml
+
+and
+"I’d like to define a class that acts just like a data.frame, just like the data.table class does, but contains some additional metadata (e.g. the units associated with the columns) and has some additional methods associated with it (e.g. that might do something with those units) while also working with any function that simply knows how to handle data.frame objects.
+How might this be done?"
+http://carlboettiger.info/2013/09/11/extending-data-frame-class.html
+
+
+Also this guys attempt was interesting (I like TraMineR too!)
+http://ivanhanigan.github.io/2013/11/handling-survey-data-with-r/
+#### Code:extend-Rs-data-frame-class-with-metadata
+    
+#+end_src
+
 ** R-reml-and-rfigshare
 #+begin_src R :session *R* :tangle ~/projects/ivanhanigan.github.com.raw/_posts/2013-10-12-data-documentation-case-study-reml-and-rfigshare.md :exports reports :eval no :padline no
   ---
