--- a/index.org
+++ b/index.org
@@ -4060,13 +4060,13 @@ Transformation
   
 #+end_src
 
-** 2013-12-24- a-few-best-practices-for-statistical-programming
+** 2013-12-24-a-few-best-practices-for-statistical-programming
 #+name: a-few-best-practices-for-statistical-programming-header
-#+begin_src markdown :tangle ~/projects/ivanhanigan.github.com.raw/_posts/2013-12-24- a-few-best-practices-for-statistical-programming.md :exports none :eval no :padline no
+#+begin_src markdown :tangle ~/projects/ivanhanigan.github.com.raw/_posts/2013-12-24-a-few-best-practices-for-statistical-programming.md :exports none :eval no :padline no
 ---
-name:  a-few-best-practices-for-statistical-programming
+name: 2013-12-24-a-few-best-practices-for-statistical-programming
 layout: post
-title:  a-few-best-practices-for-statistical-programming
+title: a-few-best-practices-for-statistical-programming
 date: 2013-12-24
 categories:
 - research methods
@@ -4080,7 +4080,8 @@ categories:
 #### Best Practices for Statistical Programming
 
 - Write Out a Directed Acyclic Graph (DAG)
-- Vectorize Your Operations (profile your code and understand where it spends its time)
+- Vectorize Your Operations
+- Profile your code and understand where it spends its time
 - Generate Data and Fit Models
 - Correctness: always ensure that code infers  parameters of models given simulated data with known parameters.
 
@@ -4088,7 +4089,8 @@ categories:
 #### Additional suggestions
 
 - Unit Testing (use testthat)
-- Re-factoring - as above, but with extra attention to system.time() 
+- Create modular code with discrete chunks
+- Write functions as much as possible, put these into a personal 'misc' package
    
 #+end_src
 
