--- a/index.org
+++ b/index.org
@@ -376,7 +376,10 @@ So I thought what's the other 10?  Here's a few contenders for my work:
 *** test-upcase_string
 #+name:upcase_string
 #+begin_src R :session *R* :tangle tests/test-upcase_string.r :exports none :eval no
-  # name:upcase_string
+  # name:upcase_strin
+  require(devtools)
+  install_github("disentangle","ivanhanigan")
+  require(disentangle)
   x <- c("The", "quick", "Brown", "fox/lazy dog")
   sapply(x, upcase_string)
   sapply(x, upcase_string, tosplit = "/")
@@ -418,6 +421,147 @@ So I thought what's the other 10?  Here's a few contenders for my work:
   
   
       
+#+end_src
+
+** R-levenshtein
+*** R-levenshtein
+#+name:levenshtein
+#+begin_src R :session *R* :tangle R/levenshtein.r :exports none :eval no
+  ################################################################
+  # name:levenshtein
+  levenshtein <- function(string1, string2, case=TRUE, map=NULL) {
+          if(!is.null(map)) {
+                  m <- matrix(map, ncol=2, byrow=TRUE)
+                  s <- c(ifelse(case, string1, tolower(string1)), ifelse(case, string2, tolower(string2)))
+                  for(i in 1:dim(m)[1]) s <- gsub(m[i,1], m[i,2], s)
+                  string1 <- s[1]
+                  string2 <- s[2]
+          }
+   
+          if(ifelse(case, string1, tolower(string1)) == ifelse(case, string2, tolower(string2))) return(1)
+   
+          s1 <- strsplit(paste(" ", ifelse(case, string1, tolower(string1)), sep=""), NULL)[[1]]
+          s2 <- strsplit(paste(" ", ifelse(case, string2, tolower(string2)), sep=""), NULL)[[1]]
+          
+          l1 <- length(s1)
+          l2 <- length(s2)
+          
+          d <- matrix(nrow = l1, ncol = l2)
+   
+          for(i in 1:l1) d[i,1] <- i-1
+          for(i in 1:l2) d[1,i] <- i-1
+          for(i in 2:l1) for(j in 2:l2) d[i,j] <- min((d[i-1,j]+1) , (d[i,j-1]+1) , (d[i-1,j-1]+ifelse(s1[i] == s2[j], 0, 1)))
+          
+          d[l1,l2]
+          
+          (max(l1,l2) - d[l1,l2]) / (max(l1,l2))
+          
+  }
+  
+  
+#+end_src
+*** test-levenshtein
+#+name:levenshtein
+#+begin_src R :session *R* :tangle tests/test-levenshtein.r :exports none :eval no
+  ################################################################
+  # name:levenshtein
+  #debug(levenshtein)
+  require(devtools)
+  install_github("disentangle","ivanhanigan")
+  require(disentangle)
+  
+  levenshtein("lazy","1 lasy")
+  # http://www.tintinologist.org/guides/lists/curses.html
+  textin  <- read.csv(textConnection("curse
+Aardvark! 
+Abecedarians! 
+Aborigine! 
+Addle-pated lumps of anthracite! 
+(old) Alcoholic ! 
+Anachronisms! 
+Anacoluthons! Antediluvian bulldozer [Tibet p60 B2]! Anthracite! Anthropithecus! Anthropophagus! Arabian Nightmare! Artichokes! Autocrats! Aztecs! [15]
+  B
+  
+  Baboons! Baby-snatchers! Bagpipers! Bald-headed budgerigar! Bandits! Bashi-bazouks! Bath-tub Admiral! Beast! Belemnite! Big-head [Tibet p35 B3]! Billions of blue blistering boiled and barbecued barnacles [The Seven Crystal Balls, p14, frame 10]! Billions of billious barbecued blue blistering barnacles! Billions of Bilious Blue BlisteringBarnacles! Billions of bilious blue blistering barnacles in a thundering typhoon [The Seven Crystal Balls]! Billions of Blue Blistering Barnacles! Black beetles! Black Marketers! Blackamoor! Blackbird! Blackguards! Blithering Bombardier! Blistering Barnacles! Blistereing blundering bird-brain [Prisoners p9 E4]! Bloodsuckers! Blue blistering barnacles! Blue Blistering Bell-Bottomed Balderdash! Blunderbuss! Bodysnatcher! Bootlegger! Borgia! Bougainvillea! Brat! Breathalyser! Brigands! Brutes! Bucaneers! Bully! Butcher! [37]
+  C
+  
+  Cachinnating cockatoo! Cannibals! Carpetsellers! Caterpillars! Centipede! Cercopithecus! Certified Diplodocuses [Calculus Affair, p30]! Coconut[Crab p58 panel 5]! Coelcanth! Colocynths! Corsair! Cowards! Crabapples! Cro-Magnon! Crooks! Cushion footed quadrupeds! Cyclotron! [17]
+  D
+  
+  Diplodocus! Dizzards [Unicorn p54 C1/frame 7]! Dogs! Doryphore! Doryphores! Duck-billed platypus! Dunderheaded coconuts! Dynamiter! [8]
+  E
+  
+  Ectoplasms! Egoists! [2]
+  F
+  
+  Fancy-dress Facist! Fancy-dress Fatima! Fancy-dress freebooter [Unicorn p24 C1]! Fatfaces! Filibuster(s)! Fourlegged Cyrano! Freshwater pirate [Unicorn p24 C1]! Freshwater swabs! Fuzzy wuzzy! [9]
+  G
+  
+  Gallows-fodder! Gangof Theives! Gangsters! Gibbering anthropoids! Great flat-footed grizzly bear! Gobbledgook! Gogglers! Goosecaps! Guano-gatherers [Prisoners p9 A1]! Gyroscope! [10]
+  H
+  
+  Harlequin! Heretic! Highwayman! Hydrocarbon! [4]
+  I
+  
+  Iconoclasts! Idiots! ... you, Imitation Incas, you [Prisoners p47 B2]! You, interplantary goat, you [Explorers on the Moon p62 C3]! [4]
+  J
+  
+  Jellied eel! Jellyfish! Jobbernowl [Tibet p60 B2]! [3]
+  K
+  
+  Kleptomaniacs! Koua Kouakouin Kouinkouin Koua Kouin Koua [Emerald p30 panel 8]! [2]
+  L
+  
+  Lily-livered landlubbers! Liquorice[Crab p59 panel 2]! Loathsome brute! Logarithim! Lubberscum! [5]
+  M
+  
+  Macrocephalic baboon! Megacycle [Tibet p60 B3]! Megacycle Pyromaniac! Mameluke! Miserable blundering barbecued blister! Miserable earth worms! Miserable miser! Miserable molecule of mildew! Misguided missles! MisterMule! Monopolizers! Monster! Morons! Moujiks! Mountebanks! Musical morons! [16]
+  N
+  
+  Nanny Goat! Nitwits! Nitwitted ninepins! Nyctalops! [4]
+  O
+  
+  Odd-toed ungulate! Ophicleides! Orangoutang! Ostrogoth! [4]
+  P
+  
+  Pachyrhizus! Parasites! Patagonians! Pestilential Pachyderm! Phylloxera! Pickled herrings! Pirates! Pithecanthropic montebanks! Pithecanthropic pickpocket [Tibet p37 A3]! Pithecanthropus [Unicorn p24 C1]! Pockmarks! Politican! Poltroons! Polygraphs! Polynesian! Profiteers! Psychopath! Purple profiteering jellyfish! Pyrographers! Pyromaniac! [20]
+  R
+  
+  Raggle taggle ruminants! Rapscallion! Rats! Revenge [Crab p58 panel 4]! Rhizopods! RKRPXZKRMTFRZ! Road roller [Secret of the Unicorn]! Roadhogs! [8]
+  S
+  
+  Saucy tramp! Savages! Scorpion! Sea-gherkin(s)! Sea-lice! Sea lion! [Prisoners p9, frame 6] Shipwreckers! Slavertrader! Slubberdegullions! Sparrows! Spitfire! Steamroller! Stoolpigeon! Subtropical sea-louse! Swine! [15]
+  
+  Note: Squawking popinjay - in The Secret of the Unicorn, on page 24, Captain Francis Haddock says it to Red Rackham--but since Captain Archibald Haddock is narrating this to Tintin, some one may say that it is one of his many curse words. Also, a parrot says it in Red Rackham's Treasure on page 29. [NAB]
+  T
+  
+  Technocrat! Ten thousand thundering typhoons! Terrapins! Terrorists! Thundering typhoons! Tin hatted tyrants! Toads! Toffee-noses! Traitors! Tramps! Tribe of Polynesians [Destination Moon p5 D1]! Troglodytes! Turncoats! Twister! Two-timing Troglodytes! [15]
+  U
+  
+  Ungulate (see O for odd-toed ungulate)
+  V
+  
+  Vandal! Vegetarian! Vermicellis! Viper! Visigoths! Vulture! [6]
+  W
+  
+  Weevils! Whippersnapper! Wildcat! Woodlice! [4]
+  Y
+  
+  Young monkey [Tibet p54 A4]! [1]
+  Z
+  
+  Zapotecs! [1]
+  "))
+#+end_src
+*** man-levenshtein
+#+name:levenshtein
+#+begin_src R :session *R* :tangle no :exports none :eval no
+################################################################
+# name:levenshtein
+#http://rwiki.sciviews.org/doku.php?id=tips:data-strings:levenshtein
+#http://wiki.r-project.org/rwiki/doku.php?id=tips:data-strings:levenshtein
+
+
 #+end_src
 
 * Data Output
