--- a/index.org
+++ b/index.org
@@ -1691,11 +1691,11 @@ I've been using a [fictitious dataset from a Statistics Methodology paper by Rit
   # name:reml_boilerplate
    
   # func
-  if(!require(EML)) {
-    require(devtools)
-    install_github("EML", "ropensci")
-    } 
-  require(EML)
+  ## if(!require(EML)) {
+  ##   require(devtools)
+  ##   install_github("EML", "ropensci")
+  ##   } 
+  ## require(EML)
   
   reml_boilerplate <- function(data_set, created_by = "Ivan Hanigan <ivanhanigan@gmail.com>", data_dir = getwd(), titl = NA, desc = "")
   {
