--- a/index.org
+++ b/index.org
@@ -205,6 +205,7 @@ pg_dump -h ip_address -U username -i -t schema.table weather | psql -h localhost
 #+begin_src R :session *R* :tangle no :exports none :eval no
 #### name:R-xls-read-all-worksheets####
 # http://stackoverflow.com/questions/12945687/how-to-read-all-worksheets-in-an-excel-workbook-into-an-r-list-with-data-frame-e
+require(XLConnect)
 wb <- loadWorkbook("myBook.xlsx")
 lst = readWorksheet(wb, sheet = getSheets(wb))
 str(lst)
