add more stuff to do multiple tsks

--- a/gantt-tj3/text-gantt.org
+++ b/gantt-tj3/text-gantt.org
@@ -1,16 +1,3 @@
-#+TITLE:     gantt-tj3.org
-* Action list                                          :taskjuggler_project:
-** TODO Test tj3 A
-    :PROPERTIES:
-    :Effort:    1w 
-    :allocate:  toA   
-    :END:
-* Resources                                            :taskjuggler_resource:
-** A
-    :PROPERTIES:
-    :resource_id:  toA 
-    :END:
-# Local Variables:
-# org-export-taskjuggler-target-version: 3.0
-# org-export-taskjuggler-default-reports: ("include \"gantexport.tji\"")
-# End:
+[1] "TRUE"
+[1] "\n** TODO Test tj3 A\n    :PROPERTIES:\n    :Effort:    1w \n    :allocate:  toA \n    :END:\n"
+[1] "\n** TODO Test tj3 A\n    :PROPERTIES:\n    :Effort:    1w \n    :allocate:  toA \n    :END:\n"
