--- a/gantt-tj3/text-gantt.org
+++ b/gantt-tj3/text-gantt.org
@@ -1,4 +1,7 @@
 #+TITLE:     gantt-tj3.org
+
+#+PROPERTY: Effort_ALL 2d 5d 10d 20d 30d 35d 50d
+
 * Action list                                          :taskjuggler_project:
 
 ** Phase1 
@@ -8,6 +11,11 @@
     :task_id:   test-tj3-a 
     :Effort:    1w 
     :allocate:  toA 
+
+    :start:    2013-12-02 
+
+    :BLOCKER:     
+
     :END:
 
 *** TODO  Test tj3 B 
@@ -15,6 +23,9 @@
     :task_id:   test-tj3-b 
     :Effort:    1w 
     :allocate:  toB 
+
+    :BLOCKER:    previous-sibling 
+
     :END:
 
 ** Phase2 
@@ -24,6 +35,9 @@
     :task_id:   test-2-tj3 
     :Effort:    2w 
     :allocate:  toA 
+
+    :BLOCKER:    test-tj3-b 
+
     :END:
 
 *** TODO  Test 2 tj3 B 
@@ -31,6 +45,9 @@
     :task_id:   test-2-tj3-b 
     :Effort:    2w 
     :allocate:  toB 
+
+    :BLOCKER:    previous-sibling 
+
     :END:
 
 ** Phase3 
@@ -40,6 +57,9 @@
     :task_id:   doing-a-lot 
     :Effort:    1d 
     :allocate:  toC 
+
+    :BLOCKER:    test-tj3-a 
+
     :END:
 
 * Resources                                            :taskjuggler_resource:
