--- a/gantt-tj3/text-gantt.org
+++ b/gantt-tj3/text-gantt.org
@@ -4,24 +4,42 @@
 
 * Action list                                          :taskjuggler_project:
 
+** Milestones 
+
+*** TODO  start project 
+    :PROPERTIES:
+    :task_id:   start-project 
+
+    :start:    2014-02-22 
+
+    :END:
+
+*** TODO  Mid-term review 
+    :PROPERTIES:
+    :task_id:   mid-term-review 
+
+    :start:    2014-06-28 
+
+    :END:
+
 ** Phase1 
 
 *** TODO  Test tj3 A 
     :PROPERTIES:
     :task_id:   test-tj3-a 
+
     :Effort:    1w 
+
     :allocate:  toA 
-
-    :start:    2013-12-02 
-
-    :BLOCKER:     
 
     :END:
 
 *** TODO  Test tj3 B 
     :PROPERTIES:
     :task_id:   test-tj3-b 
+
     :Effort:    1w 
+
     :allocate:  toB 
 
     :BLOCKER:    previous-sibling 
@@ -33,7 +51,9 @@
 *** TODO  Test 2 tj3 
     :PROPERTIES:
     :task_id:   test-2-tj3 
+
     :Effort:    2w 
+
     :allocate:  toA 
 
     :BLOCKER:    test-tj3-b 
@@ -43,7 +63,9 @@
 *** TODO  Test 2 tj3 B 
     :PROPERTIES:
     :task_id:   test-2-tj3-b 
+
     :Effort:    2w 
+
     :allocate:  toB 
 
     :BLOCKER:    previous-sibling 
@@ -55,7 +77,9 @@
 *** TODO  doing a lot 
     :PROPERTIES:
     :task_id:   doing-a-lot 
+
     :Effort:    1d 
+
     :allocate:  toC 
 
     :BLOCKER:    test-tj3-a 
