--- a/index.org
+++ b/index.org
@@ -1038,6 +1038,39 @@ http://stackoverflow.com/questions/15686451/dates-from-excel-to-r-platform-depen
   ## (these values come from http://support.microsoft.com/kb/214330)
 #+end_src
 
+** R-spatial
+*** TODO xy2shp
+#+name:xy2shp
+#+begin_src R :session *R* :tangle no :exports none :eval no
+  # func
+
+  if(!require(ggmap)) install.packages('ggmap'); require(ggmap)
+  if (!require(rgdal)) install.packages('rgdal'); require(rgdal)
+  epsg <- make_EPSG()
+  # load
+  latlong <- read.table(tc <- textConnection(
+  "ID  POINT_Y   POINT_X
+  1  150.5556 -35.09305
+  2  150.6851 -35.01535
+  3  150.6710 -35.06412
+  4  150.6534 -35.08666
+  "), header = TRUE); close(tc)
+  # do
+  for(i in 1:nrow(latlong)){
+    coords <- as.numeric(latlong[i,c('POINT_Y', 'POINT_X')])
+    e <- as.data.frame(cbind(i, t(coords), revgeocode(coords)))
+    write.table(e, "test.csv", sep = ',', append = i > 1, col.names = i == 1, row.names = F)
+  }
+  d <- read.csv('test.csv')
+  head(d)
+  ## Treat data frame as spatial points
+  pts <- SpatialPointsDataFrame(cbind(d$V2,d$V3),d,
+    proj4string=CRS(epsg$prj4[epsg$code %in% '4283']))
+  writeOGR(pts, 'test.shp', 'test', driver='ESRI Shapefile')
+  
+#+end_src
+
+
 * Data Output
 * Data Documentation
 ** COMMENT data-documentation-blogposts
@@ -2870,6 +2903,62 @@ categories:
 
   - Further research is required.
   
+#+end_src
+
+** bounding_box
+*** R-bounding_box
+#+name:bounding_box
+#+begin_src R :session *R* :tangle R/bounding_box.r :exports none :eval no
+################################################################
+# name:bounding_box
+
+#+end_src
+*** test-bounding_box
+#+name:bounding_box
+#+begin_src R :session *R* :tangle tests/test-bounding_box.r :exports none :eval no
+  ################################################################
+  # name:bounding_box
+  if (!require(rgdal)) install.packages('rgdal'); require(rgdal)
+  epsg <- make_EPSG()
+  # load
+  d <- read.table(textConnection(
+  "ID    long       lat
+  1  150.5556 -35.09305
+  2  150.6851 -35.01535
+  3  150.6710 -35.06412
+  4  150.6534 -35.08666
+  "), header = TRUE)
+  # do
+  str(d)
+  head(d)
+  ## Treat data frame as spatial points
+  pts <- SpatialPointsDataFrame(cbind(d$long,d$lat),d,
+    proj4string=CRS(epsg$prj4[epsg$code %in% '4283']))
+  str(pts)
+  bb <- pts@bbox
+  # TODO polygons
+  
+  # morpho report
+  # only for southern hemisphere, east of GMT?
+  loc <- data.frame(rbind(
+  c(NA, abs(bb[2,2]), NA),
+  c(bb[1,1],  NA, bb[1,2]),
+  c(NA, abs(bb[2,1]), NA)
+  ))
+  loc
+  loc$X2[c(1,3)] <- sprintf("%s S", abs(loc$X2[c(1,3)]))
+  loc[2,c(1,3)] <- sprintf("%s E", abs(loc[2,c(1,3)]))
+  
+  loc
+  #print(xtable(loc), type = 'html')
+  
+#+end_src
+*** man-bounding_box
+#+name:bounding_box
+#+begin_src R :session *R* :tangle no :exports none :eval no
+################################################################
+# name:bounding_box
+
 #+end_src
 
 * Exploratory Data Analysis
