--- a/index.org
+++ b/index.org
@@ -17,6 +17,21 @@ This project is my collection of notes and customised software tools for data ma
   install_github("disentangle", "ivanhanigan")
   require(disentangle)
 #+end_src
+** DESCRIPTION-code
+#+name:DESCRIPTION
+#+begin_src R :session *R* :tangle DESCRIPTION :exports none :eval no :padline no
+Package: Disentangle
+Type: Package
+Title: Disentangle
+Version: 1.1
+Date: 2014-03-26
+Author: ivanhanigan
+Maintainer: <ivan.hanigan@gmail.com>
+Depends: ggmap, maps, maptools, rgdal
+Description:  Functions I modified or created.
+License: GPL (>= 2)
+#+end_src
+
 * Test Data
 ** COMMENT blog-test-data-for-classification-trees
 #+name:test-data-for-classification
@@ -2905,21 +2920,48 @@ categories:
   
 #+end_src
 
-** bounding_box
-*** R-bounding_box
+** morpho_bounding_box
+*** R-morpho_bounding_box
 #+name:bounding_box
-#+begin_src R :session *R* :tangle R/bounding_box.r :exports none :eval no
-################################################################
-# name:bounding_box
-
-#+end_src
-*** test-bounding_box
-#+name:bounding_box
-#+begin_src R :session *R* :tangle tests/test-bounding_box.r :exports none :eval no
+#+begin_src R :session *R* :tangle R/morpho_bounding_box.r :exports none :eval no
   ################################################################
   # name:bounding_box
-  if (!require(rgdal)) install.packages('rgdal'); require(rgdal)
-  epsg <- make_EPSG()
+  morpho_bounding_box <- function(longitude = NA,
+                                  latitude = NA,
+                                  projection = '4283'){
+    long <- longitude
+    lat <- latitude
+    d <- as.data.frame(cbind(long, lat))
+    ## Treat data frame as spatial points
+    epsg <- make_EPSG()
+    # epsg[grep("GDA94$", epsg$note),]
+    pts <- SpatialPointsDataFrame(cbind(long, lat), d,
+      proj4string=CRS(epsg$prj4[epsg$code %in% projection]))
+    #str(pts)
+    bb <- pts@bbox
+    #bb
+    # TODO polygons   
+    # TODO only for southern hemisphere, east of GMT?
+    loc <- data.frame(rbind(
+    c(NA, abs(bb[2,2]), NA),
+    c(bb[1,1],  NA, bb[1,2]),
+    c(NA, abs(bb[2,1]), NA)
+    ))
+    #loc
+    loc$X2[c(1,3)] <- sprintf("%s S", abs(loc$X2[c(1,3)]))
+    loc[2,c(1,3)] <- sprintf("%s E", abs(loc[2,c(1,3)]))
+     
+    return(loc)
+    }
+#+end_src
+*** test-morpho_bounding_box
+#+name:bounding_box
+#+begin_src R :session *R* :tangle tests/test-morpho_bounding_box.r :exports none :eval no
+  ################################################################
+  # name:bounding_box
+  require(xtable)
+  #if (!require(rgdal)) install.packages('rgdal'); require(rgdal)
+  #epsg <- make_EPSG()
   # load
   d <- read.table(textConnection(
   "ID    long       lat
@@ -2931,27 +2973,11 @@ categories:
   # do
   str(d)
   head(d)
-  ## Treat data frame as spatial points
-  pts <- SpatialPointsDataFrame(cbind(d$long,d$lat),d,
-    proj4string=CRS(epsg$prj4[epsg$code %in% '4283']))
-  str(pts)
-  bb <- pts@bbox
-  # TODO polygons
-  
-  # morpho report
-  # only for southern hemisphere, east of GMT?
-  loc <- data.frame(rbind(
-  c(NA, abs(bb[2,2]), NA),
-  c(bb[1,1],  NA, bb[1,2]),
-  c(NA, abs(bb[2,1]), NA)
-  ))
+  loc  <- morpho_bounding_box(longitude = d$long,
+                      latitude = d$lat,
+                      projection = '4283')
   loc
-  loc$X2[c(1,3)] <- sprintf("%s S", abs(loc$X2[c(1,3)]))
-  loc[2,c(1,3)] <- sprintf("%s E", abs(loc[2,c(1,3)]))
-  
-  loc
-  #print(xtable(loc), type = 'html')
-  
+  print(xtable(loc), type = 'html')
 #+end_src
 *** man-bounding_box
 #+name:bounding_box
