--- a/index.org
+++ b/index.org
@@ -2926,27 +2926,20 @@ categories:
 #+begin_src R :session *R* :tangle R/morpho_bounding_box.r :exports none :eval no
   ################################################################
   # name:bounding_box
-  morpho_bounding_box <- function(longitude = NA,
-                                  latitude = NA,
-                                  projection = '4283'){
-    long <- longitude
-    lat <- latitude
-    d <- as.data.frame(cbind(long, lat))
-    ## Treat data frame as spatial points
-    epsg <- make_EPSG()
-    # epsg[grep("GDA94$", epsg$note),]
-    pts <- SpatialPointsDataFrame(cbind(long, lat), d,
-      proj4string=CRS(epsg$prj4[epsg$code %in% projection]))
-    #str(pts)
-    bb <- pts@bbox
+  morpho_bounding_box <- function(x){
+    ## Check if spatial obj and proj4string is valid
+    #str(x)
+    bb <- x@bbox
     #bb
     # TODO polygons   
     # TODO only for southern hemisphere, east of GMT?
-    loc <- data.frame(rbind(
-    c(NA, abs(bb[2,2]), NA),
-    c(bb[1,1],  NA, bb[1,2]),
-    c(NA, abs(bb[2,1]), NA)
-    ))
+    loc <- data.frame(
+      rbind(
+        c(NA, abs(bb[2,2]), NA),
+        c(bb[1,1],  NA, bb[1,2]),
+        c(NA, abs(bb[2,1]), NA)
+        )
+      )
     #loc
     loc$X2[c(1,3)] <- sprintf("%s S", abs(loc$X2[c(1,3)]))
     loc[2,c(1,3)] <- sprintf("%s E", abs(loc[2,c(1,3)]))
@@ -2973,11 +2966,16 @@ categories:
   # do
   str(d)
   head(d)
-  loc  <- morpho_bounding_box(longitude = d$long,
-                      latitude = d$lat,
-                      projection = '4283')
+  epsg <- make_EPSG()
+  # epsg[grep("GDA94$", epsg$note),]
+  projection  <- '4283'
+  pts <- SpatialPointsDataFrame(cbind(d$long, d$lat), d,
+    proj4string=CRS(epsg$prj4[epsg$code %in% projection]))
+  str(pts)
+  loc  <- morpho_bounding_box(x = pts)
   loc
   print(xtable(loc), type = 'html')
+  
 #+end_src
 *** man-bounding_box
 #+name:bounding_box
